<resources>
    <string name="app_name">MageCart</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="password">password</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="tnc">I agree to terms and conditions</string>
    <string name="hello_msg">Hi User!</string>
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="greetings_user">Hi User</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cart">Cart</string>
</resources>