<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.sanjeevyadavit.magecart.presentation.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/categoriesFragment"
        android:name="com.sanjeevyadavit.magecart.presentation.categories.CategoriesFragment"
        android:label="@string/categories" >
        <action
            android:id="@+id/action_categoriesFragment_to_productListFragment"
            app:destination="@id/productListFragment" />
    </fragment>

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.sanjeevyadavit.magecart.presentation.profile.ProfileFragment"
        android:label="@string/profile">
        <action
            android:id="@+id/action_profileFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.sanjeevyadavit.magecart.presentation.login.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_signupFragment"
            app:destination="@id/signupFragment" />
    </fragment>

    <fragment
        android:id="@+id/signupFragment"
        android:name="com.sanjeevyadavit.magecart.presentation.signup.SignupFragment"
        android:label="@string/signup"
        tools:layout="@layout/fragment_signup" />
    <fragment
        android:id="@+id/productListFragment"
        android:name="com.sanjeevyadavit.magecart.presentation.products.ProductListFragment"
        android:label="fragment_product_list">
        <argument
            android:name="categoryId"
            app:argType="integer" />
    </fragment>
</navigation>